# rmcs_auto_aim_v2

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: gtest.yml
config/: config.yaml  dual-infantry.yaml  dual-sentry.yaml  mec-hero.yaml  mini-infantry.yaml
doc/: rclcpp.md  streaming.md
src/: component.cpp  runtime.cpp
src/kernel/: capturer.cpp  control_system.cpp  fire_control.cpp  fire_control.hpp  identifier.cpp  pose_estimator.cpp  pose_estimator.hpp  tracker.cpp  tracker.hpp  visualization.cpp  visualization.hpp
src/module/capturer/: common.hpp  local_video.cpp  local_video.hpp  video.cpp
src/module/debug/: action_throttler.hpp  framerate.hpp  log_limiter.hpp
src/module/debug/visualization/: armor_visualizer.cpp  armor_visualizer.hpp  stream_context.cpp  stream_session.cpp
src/module/fire_control/: aim_point_chooser.cpp  aim_point_chooser.hpp  trajectory_solution.cpp  trajectory_solution.hpp
src/module/identifier/: armor_detection.cpp  lightbar.cpp  model.cpp  preprocess.cpp
src/module/identifier/models/: shenzhen.hpp  shenzhen_0526.hpp  shenzhen_0708.hpp  tongji_yolov5.hpp
src/module/predictor/: ekf_parameter.hpp
src/module/tracker/: armor_filter.cpp  decider.cpp  decider.hpp  state.hpp
src/utility/: duck_type.hpp  panic.cpp  serializable.hpp  string.hpp  time.hpp
src/utility/coroutine/: common.hpp
src/utility/image/: armor.cpp
src/utility/math/: conversion.hpp  linear.hpp  point.hpp
src/utility/math/kalman_filter/: ekf.hpp
src/utility/math/solve_pnp/: pnp_solution.cpp  pnp_solution.hpp  solve_pnp.hpp
src/utility/model/: armor_detection.hpp  common_model.hpp
src/utility/rclcpp/: configuration.hpp  node.cpp  node.details.hpp  param_adapter.hpp
src/utility/rclcpp/visual/: armor.cpp  armor.hpp  posture.hpp  transform.hpp
src/utility/robot/: armor.hpp  id.hpp
src/utility/shared/: context.hpp  interprocess.hpp
src/utility/tf/: static_tf.hpp
src/utility/yaml/: tf.hpp
test/: CMakeLists.txt  action_throttler.cpp  asset.yml  assets_manager.hpp  download_assets.sh  duck_type.cpp  feishu_test.cpp  model_infer.cpp  pipeline.cpp  serializable.cpp  solve_pnp.cpp  static_tf.cpp  transform_communication.cpp
tool/: CMakeLists.txt  hikcamera.cpp  ov_model_status.cpp  streaming.cpp  visualization.cpp
tool/util/: snapshot.cpp  snapshot.hpp  terminal.cpp  terminal.hpp
